CREATE TABLE IF NOT EXISTS customer_returns (
    id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    return_number VARCHAR(50) NOT NULL UNIQUE,
    customer_id BIGINT UNSIGNED NOT NULL,
    customer_name VARCHAR(255) NOT NULL,
    order_id BIGINT UNSIGNED NULL,
    order_number VARCHAR(50) NULL,
    total_amount DECIMAL(10,2) NOT NULL DEFAULT 0.00,
    status ENUM('pending', 'approved', 'rejected', 'completed') NOT NULL DEFAULT 'pending',
    request_date TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    processed_date TIMESTAMP NULL,
    refund_method ENUM('cash', 'store_credit', 'original_payment') NOT NULL,
    notes TEXT NULL,
    processed_by VARCHAR(255) NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP NULL,
    FOREIGN KEY (customer_id) REFERENCES customers (id) ON DELETE RESTRICT,
    FOREIGN KEY (order_id) REFERENCES sells (id) ON DELETE SET NULL,
    INDEX idx_customer_returns_status (status),
    INDEX idx_customer_returns_customer_id (customer_id),
    INDEX idx_customer_returns_request_date (request_date),
    INDEX idx_customer_returns_deleted_at (deleted_at)
);
